[project]
name = "cryoswitch-manager"
version = "0.1.0"
description = "Interface for controlling cryogenic switches in SNU Quantum Device Lab. Utilizes QphoX switch controller with Radiall switches."
authors = [
    {name = "Eunjong Kim",email = "ekim7206@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "serial (>=0.0.97,<0.0.98)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
